<resources>
    <string name="app_name">Eco Food Tracker App</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="open">Open Navigation Bar</string>
    <string name="close">Close Navigation Bar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nav_header">Say No to Food Waste</string>
    <string name="hello">Hello,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here</string>
    <string name="food_name">Food Name</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="logout">logout</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="or_register_with">or register with</string>
    <string name="get_food">Get Food</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="default_web_client_id">150655209027-1iso8d4eaua943a410dd7n3tu1mjfjhl.apps.googleusercontent.com</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="not_a_member">Not Member?</string>
    <string name="create_new_account">Create account</string>
    <string name="filter_button">Filter Button</string>
    <string name="food_image">Food Image</string>
    <string name="rate">Rate</string>
    <string name="splash_screen_fragment">splash_screen_fragment</string>
    <string name="register_fragment">register_fragment</string>
    <string name="login_fragment">login_fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="deliver_happiness_along_with_food_nand_make_yourself_proud">Deliver Happiness along with Food \nand make yourself Proud</string>
    <string name="be_the_one_to_spread_humanity">Be the one to Spread Humanity</string>
    <string name="back_button">Back Button</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="track_order">Track Order</string>
    <string name="about">About</string>
    <string name="about_app_introduction"><![CDATA[About app (Introduction):>]]></string>
    <string name="about_info">Welcome to eco food tracker, where we believe in the power of food to bring people together and make a positive impact in our communities. Our mission is simple yet profound: to reduce food waste by connecting those with excess food to those in need.</string>
    <string name="our_vision">Our Vision :</string>
    <string name="our_vision_info">At our core, we envision a world where no one goes hungry, and where surplus food is shared rather than wasted. We are passionate about leveraging technology to facilitate the redistribution of excess food and to address the pressing issue of food insecurity.</string>
    <string name="purpose">Purpose :</string>
    <string name="purpose_info">Our food application serves as a platform for individuals, businesses, and organizations to easily donate surplus food to those who need it most. Whether you\'re a restaurant with leftover meals at the end of the day, a grocery store with excess produce, or a homeowner with extra groceries, our app provides a convenient way to connect with people to ensure that no food goes to waste.</string>
    <string name="features">Features :</string>
    <string name="features_info">Seamless Donation Process: Our user-friendly interface makes it easy to list surplus food items and connect with nearby organizations in need. - Real-Time Updates: Receive notifications when a nearby charity is in need of specific food items, allowing for quick and efficient donations. - Impact Tracking: Track the impact of your donations, including the amount of food saved from being wasted and the number of individuals served. - Community Engagement: Join a community of like-minded individuals and businesses who are committed to reducing food waste and fighting hunger.</string>
    <string name="our_team">Our team :</string>
    <string name="team_info">Behind our food application is a dedicated team of developers, food enthusiasts, and social activists who are passionate about making a difference. With a shared commitment to sustainability and social responsibility, we work tirelessly to improve our platform and expand our reach to help more people in need.</string>
    <string name="values">Values :</string>
    <string name="values_info">Sustainability: We believe in sustainable practices and are committed to reducing food waste and environmental impact. - Compassion: We approach our work with empathy and compassion, understanding the importance of supporting those facing food insecurity. - Collaboration: We recognize that solving complex issues like hunger requires collaboration and partnerships across sectors, and we actively seek opportunities to work together towards our common goals.</string>
    <string name="contact_information">Contact information :</string>
    <string name="contact_info">We\'d love to hear from you! If you have any questions, feedback, or suggestions for how we can improve our app, please don\'t hesitate to reach out to us at [Insert Contact Information]. Together, we can make a difference in the fight against food waste and hunger.</string>
    <string name="thanks_info">Thank you for joining us on this journey to create a more sustainable and equitable food system. Together, we can ensure that everyone has access to nutritious food and no one goes hungry.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_info">Welcome to eco food tracker. These Terms and Conditions govern your access to and use of the App\'s services. By accessing or using the App, you agree to be bound by these Terms and Conditions. If you do not agree with any aspect of these terms, please do not use the App.</string>
    <string name="_1_use_of_the_app">1.Use of the App :</string>
    <string name="use_of_the_app_info">You must be at least 13 years old to use the App. By using the App, you represent and warrant that you are at least 13 years old and have the legal capacity to enter into these Terms and Conditions.</string>
    <string name="_2_account_registration">2.Account Registration :</string>
    <string name="account_registration_info">Some features of the App may require you to register an account. You agree to provide accurate and complete information during the registration process and to keep your account credentials secure. You are responsible for all activities that occur under your account.</string>
    <string name="_3_user_conduct">3.User Conduct :</string>
    <string name="user_conduct_info">You agree to use the App in compliance with applicable laws and regulations and in a manner that does not infringe upon the rights of others or interfere with the operation of the App. Prohibited activities include but are not limited to: \n \nViolating any laws or regulations. Uploading or sharing content that is unlawful, harmful, or offensive. Attempting to gain unauthorized access to the App\'s systems or networks. Intellectual Property: The App and its content, including but not limited to text, graphics, logos, and software, are protected by intellectual property laws and are the property of the App or its licensors. You may not reproduce, modify, distribute, or create derivative works based on the App\'s content without prior written consent.</string>
    <string name="_4_disclaimer_of_warranties">4.Disclaimer of Warranties :</string>
    <string name="disclaimer_of_warranties_info">The App is provided on an \'as-is\' and \'as-available\' basis without any warranties of any kind, whether express or implied. We do not warrant that the App will be error-free or uninterrupted, or that any defects will be corrected.</string>
    <string name="_5_limitation_of_liability">5.Limitation of Liability :</string>
    <string name="limitation_of_liability_info">To the fullest extent permitted by law, we shall not be liable for any indirect, incidental, special, or consequential damages arising out of or in connection with your use of the App, including but not limited to lost profits, loss of data, or loss of goodwill.</string>
    <string name="_6_indemnification">6.Indemnification :</string>
    <string name="indemnification_info">You agree to indemnify and hold harmless the App, its affiliates, and their respective officers, directors, employees, and agents from any claims, damages, or losses arising out of your use of the App or violation of these Terms and Conditions.</string>
    <string name="_7_changes_to_terms">7.Changes to Terms :</string>
    <string name="change_of_terms_info">We reserve the right to modify or update these Terms and Conditions at any time. Any changes will be effective immediately upon posting the revised terms on the App. Your continued use of the App after the posting of changes constitutes your acceptance of such changes.</string>
    <string name="_7_contact_information">7.Contact Information :</string>
    <string name="conditions_contact_info">If you have any questions or concerns about these Terms and Conditions, please contact us at</string>
    <string name="conditions_thanks_info">Thank you for using our App. We hope you enjoy your experience!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="send">Send</string>
    <string name="write_your_feedback">Write Your Feedback</string>
    <string name="hi_user_write_your_feedback_nhere">Hi User, Write your Feedback\nHere</string>
    <string name="help_and_support">Help and support</string>
    <string name="feedback">Feedback</string>
</resources>