<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/trackOrderBtn"
                android:title="@string/track_order"
                android:icon="@drawable/home_btn"/>
            <item
                android:id="@+id/aboutBtn"
                android:title="@string/about"
                android:icon="@drawable/location_btn"/>
            <item
                android:id="@+id/termsAndConditionsBtn"
                android:title="@string/terms_and_conditions"
                android:icon="@drawable/chat_btn"/>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_icon"/>
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/feedback"
                android:title="@string/feedback"
                android:icon="@drawable/feedback_icon"/>
            <item
                android:id="@+id/helpSupport"
                android:title="@string/help_and_support"
                android:icon="@drawable/help_and_support_icon"/>
        </menu>
    </item>

</menu>